Update Bruno env sample with email address

--- a/test/Bruno/.env.sample
+++ b/test/Bruno/.env.sample
@@ -1,3 +1,7 @@
 TOKEN_BASIC_AUTH_USER=
 TOKEN_BASIC_AUTH_PW=
 TOKEN_URL=
+
+# Email address for Dashboard tests (GetNotificationAddressesByEmailAddress endpoint)
+# Use your own test email or a known email address that exists in the test environment
+EMAIL_ADDRESS_TEST=testdashboard@test.com
