Update env sample for dashboard calls

--- a/test/Bruno/.env.sample
+++ b/test/Bruno/.env.sample
@@ -2,6 +2,10 @@ TOKEN_BASIC_AUTH_USER=
 TOKEN_BASIC_AUTH_PW=
 TOKEN_URL=
 
-# Email address for Dashboard tests (GetNotificationAddressesByEmailAddress endpoint)
+# Variables for Dashboard tests
 # Use your own test email or a known email address that exists in the test environment
+# Use a phone number that is valid in the test environment
+# Use the country code in URL encoded format
 EMAIL_ADDRESS_TEST=testdashboard@test.com
+PHONE_NUMBER_TEST=99999999
+COUNTRY_CODE_TEST=%2B47
