Created new endpoint GetContactInformationByEmailAddress and add related integrationtests

--- a/test/Bruno/.env.sample
+++ b/test/Bruno/.env.sample
@@ -6,6 +6,6 @@ TOKEN_URL=
 # Use your own test email or a known email address that exists in the test environment
 # Use a phone number that is valid in the test environment
 # Use the country code in URL encoded format
-EMAIL_ADDRESS_TEST=testdashboard@test.com
+EMAIL_ADDRESS_TEST=test@test.no
 PHONE_NUMBER_TEST=99999999
 COUNTRY_CODE_TEST=%2B47
