Make ShowClientUnits nullable

--- a/src/Altinn.Profile/appsettings.json
+++ b/src/Altinn.Profile/appsettings.json
@@ -11,7 +11,8 @@
     "UpdateA2ProfileSettings": false
   },
   "CoreSettings": {
-    "ProfileCacheLifetimeSeconds": 600
+    "ProfileCacheLifetimeSeconds": 600,
+    "UsePortalSettingsFromSblBridge": false
   },
   "PostgreSqlSettings": {
     "MigrationScriptPath": "Migration",
