--- a/src/Altinn.Profile/appsettings.Production.json
+++ b/src/Altinn.Profile/appsettings.Production.json
@@ -1,16 +1,28 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "System": "Information",
-      "Microsoft": "Information"
+      "Microsoft": "Information",
+      "System.Net.Http.HttpClient": "Warning"
     },
     "ApplicationInsights": {
       "LogLevel": {
         "Default": "Warning",
         "System": "Warning",
-        "Microsoft": "Warning"
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore": "Information", // keep DB info logs
+        "System.Data": "Information" 
       }
-    }
+    },
+    "OpenTelemetry": {
+      "LogLevel": {
+        "Default": "Warning",
+        "System": "Warning",
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore": "Information", // keep DB info logs
+        "System.Data": "Information"       
+      }
+     }
   }
 }
