remove comments from json

--- a/src/Altinn.Profile/appsettings.Production.json
+++ b/src/Altinn.Profile/appsettings.Production.json
@@ -11,7 +11,7 @@
         "Default": "Warning",
         "System": "Warning",
         "Microsoft": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information", // keep DB info logs
+        "Microsoft.EntityFrameworkCore": "Information",
         "System.Data": "Information" 
       }
     },
@@ -20,7 +20,7 @@
         "Default": "Warning",
         "System": "Warning",
         "Microsoft": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information", // keep DB info logs
+        "Microsoft.EntityFrameworkCore": "Information",
         "System.Data": "Information"       
       }
      }
