re-add comments about db logs

--- a/src/Altinn.Profile/appsettings.Production.json
+++ b/src/Altinn.Profile/appsettings.Production.json
@@ -11,8 +11,8 @@
         "Default": "Warning",
         "System": "Warning",
         "Microsoft": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information",
-        "System.Data": "Information" 
+        "Microsoft.EntityFrameworkCore": "Information", // keep DB info logs
+        "System.Data": "Information"
       }
     },
     "OpenTelemetry": {
@@ -20,8 +20,8 @@
         "Default": "Warning",
         "System": "Warning",
         "Microsoft": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information",
-        "System.Data": "Information"       
+        "Microsoft.EntityFrameworkCore": "Information", // keep DB info logs
+        "System.Data": "Information"
       }
      }
   }
