--- a/src/Altinn.Profile/appsettings.Staging.json
+++ b/src/Altinn.Profile/appsettings.Staging.json
@@ -11,7 +11,7 @@
         "Default": "Warning",
         "System": "Warning",
         "Microsoft": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information",
+        "Microsoft.EntityFrameworkCore": "Information", // keep DB info logs
         "System.Data": "Information"
       }
     },
@@ -20,7 +20,7 @@
         "Default": "Warning",
         "System": "Warning",
         "Microsoft": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information",
+        "Microsoft.EntityFrameworkCore": "Information", // keep DB info logs
         "System.Data": "Information"
       }
     }
