--- a/src/Altinn.Profile/appsettings.Development.json
+++ b/src/Altinn.Profile/appsettings.Development.json
@@ -4,9 +4,10 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "System": "Information",
-      "Microsoft": "Information"
+      "Microsoft": "Information",
+      "System.Net.Http.HttpClient": "Warning"
     }
   },
   "ImportJobSettings": {
