--- a/.github/workflows/use-case-ATX.yaml
+++ b/.github/workflows/use-case-ATX.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        environment: [AT22, AT23, AT24]
+        environment: [AT24]
     environment: ${{ matrix.environment }}
     runs-on: ubuntu-latest
     permissions:
@@ -58,29 +58,29 @@ jobs:
         run: |
           env_lower=$(echo "${{ matrix.environment }}" | tr '[:upper:]' '[:lower:]')
           echo "${env_lower}=true" >> $GITHUB_OUTPUT
-  slack-notify:
-    if: failure()
-    needs: test
-    permissions: {}
-    strategy:
-      matrix:
-        environment: [AT22, AT23, AT24]
-        include:
-          - environment: AT22
-            output: failed-at22
-          - environment: AT23
-            output: failed-at23
-          - environment: AT24
-            output: failed-at24
-    runs-on: ubuntu-latest
-    steps:
-      - name: Send notification
-        if: needs.test.outputs[matrix.output] == 'true'
-        uses: slackapi/slack-github-action@91efab103c0de0a537f72a35f6b8cda0ee76bf0a # v2.1.1
-        with:
-          webhook-type: incoming-webhook
-          webhook: ${{ secrets.SLACK_WEBHOOK_URL_TEST }}
-          payload: |
-            {
-              "text": ":warning: Profile use case test failure in ${{ matrix.environment }} :warning: \n\n Workflow available here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-            }
+  # slack-notify:
+  #   if: failure()
+  #   needs: test
+  #   permissions: {}
+  #   strategy:
+  #     matrix:
+  #       environment: [AT22, AT23, AT24]
+  #       include:
+  #         - environment: AT22
+  #           output: failed-at22
+  #         - environment: AT23
+  #           output: failed-at23
+  #         - environment: AT24
+  #           output: failed-at24
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Send notification
+  #       if: needs.test.outputs[matrix.output] == 'true'
+  #       uses: slackapi/slack-github-action@91efab103c0de0a537f72a35f6b8cda0ee76bf0a # v2.1.1
+  #       with:
+  #         webhook-type: incoming-webhook
+  #         webhook: ${{ secrets.SLACK_WEBHOOK_URL_TEST }}
+  #         payload: |
+  #           {
+  #             "text": ":warning: Profile use case test failure in ${{ matrix.environment }} :warning: \n\n Workflow available here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+  #           }
