--- a/.github/workflows/use-case-ATX.yaml
+++ b/.github/workflows/use-case-ATX.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        environment: [AT24]
+        environment: [AT22, AT23, AT24]
     environment: ${{ matrix.environment }}
     runs-on: ubuntu-latest
     permissions:
