--- a/.github/workflows/use-case-TT02.yaml
+++ b/.github/workflows/use-case-TT02.yaml
@@ -29,16 +29,19 @@ jobs:
         with:
           path: test/k6/src/tests/favorites.js
           flags: -e partyUuid=${{ secrets.PARTYUUID }}
+          inspect-flags: -e altinn_env=tt02 # Supplies a valid value for the pre-run validation, when env vars / flags are not yet defined
       - name: Run notification settings use case tests
         uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d # v1.3.1
         with:
           path: test/k6/src/tests/notification-settings.js
           flags: -e partyUuid=${{ secrets.PARTYUUID }}
+          inspect-flags: -e altinn_env=tt02 # Supplies a valid value for the pre-run validation, when env vars / flags are not yet defined
       - name: Run org notification addresses use case tests
         uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d # v1.3.1
         with:
           path: test/k6/src/tests/org-notification-addresses.js
           flags: -e orgNo=${{ secrets.ORGNO }}
+          inspect-flags: -e altinn_env=tt02 # Supplies a valid value for the pre-run validation, when env vars / flags are not yet defined
 
   slack-notify:
     if: failure()
