--- a/.github/workflows/use-case-ATX.yaml
+++ b/.github/workflows/use-case-ATX.yaml
@@ -20,7 +20,7 @@ jobs:
       failed-at23: ${{ steps.set-failure.outputs.at23 }}
       failed-at24: ${{ steps.set-failure.outputs.at24 }}
     env: # Shared environment vars for all k6 test scripts
-      altinn_env: ${{ vars.ENV }}
+      altinn_env: ${{ matrix.environment }}
       partyId: ${{ secrets.PARTYID }}
       pid: ${{ secrets.PID }}
       tokenGeneratorUserName: ${{ secrets.TOKENGENERATOR_USERNAME }}
@@ -36,19 +36,19 @@ jobs:
         with:
           path: test/k6/src/tests/favorites.js
           flags: -e partyUuid=${{ secrets.PARTYUUID }}
-          inspect-flags: -e altinn_env=at22 # Supplies a valid value for the pre-run validation, when env vars / flags are not yet defined
+          inspect-flags: -e altinn_env=AT22 # Supplies a valid value for the pre-run validation, when env vars / flags are not yet defined
       - name: Run notification settings use case tests
         uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d # v1.3.1
         with:
           path: test/k6/src/tests/notification-settings.js
           flags: -e partyUuid=${{ secrets.PARTYUUID }}
-          inspect-flags: -e altinn_env=at22 # Supplies a valid value for the pre-run validation, when env vars / flags are not yet defined
+          inspect-flags: -e altinn_env=AT22 # Supplies a valid value for the pre-run validation, when env vars / flags are not yet defined
       - name: Run org notification addresses use case tests
         uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d # v1.3.1
         with:
           path: test/k6/src/tests/org-notification-addresses.js
           flags: -e orgNo=${{ secrets.ORGNO }}
-          inspect-flags: -e altinn_env=at22 # Supplies a valid value for the pre-run validation, when env vars / flags are not yet defined
+          inspect-flags: -e altinn_env=AT22 # Supplies a valid value for the pre-run validation, when env vars / flags are not yet defined
       - name: Set failure output
         id: set-failure
         if: failure()
