--- a/.github/workflows/use-case-ATX.yaml
+++ b/.github/workflows/use-case-ATX.yaml
@@ -15,37 +15,68 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+    outputs:
+      failed-AT22: ${{ steps.set-failure.outputs.AT22 }}
+      failed-AT23: ${{ steps.set-failure.outputs.AT23 }}
+      failed-AT24: ${{ steps.set-failure.outputs.AT24 }}
+    env: # Shared environment vars for all k6 test scripts
+      altinn_env: ${{ matrix.environment }}
+      partyId: ${{ secrets.PARTYID }}
+      pid: ${{ secrets.PID }}
+      tokenGeneratorUserName: ${{ secrets.TOKENGENERATOR_USERNAME }}
+      tokenGeneratorUserPwd: ${{ secrets.TOKENGENERATOR_USERPASSWORD }}
+      userID: ${{ secrets.USERID }}
+
     steps:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+      - name: Set up K6
+        uses: grafana/setup-k6-action@ffe7d7290dfa715e48c2ccc924d068444c94bde2 # v1.1.0
       - name: Run favorites use case tests
-        uses: grafana/k6-action@e4714b734f2b0afaabeb7b4a69142745548ab9ec # v0.3.1
+        uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d # v1.3.1
         with:
-          filename: test/k6/src/tests/favorites.js
-          flags: -e env=${{ vars.ENV }} -e tokenGeneratorUserName=${{ secrets.TOKENGENERATOR_USERNAME }} -e tokenGeneratorUserPwd=${{ secrets.TOKENGENERATOR_USERPASSWORD }} -e userID=${{ secrets.USERID }} -e partyId=${{ secrets.PARTYID }} -e pid=${{ secrets.PID }} -e partyUuid=${{ secrets.PARTYUUID }}
+          path: test/k6/src/tests/favorites.js
+          flags: -e partyUuid=${{ secrets.PARTYUUID }}
+          inspect-flags: -e altinn_env=${{ env.altinn_env }} # Supplies the value for pre-run validation, when env vars / flags are not yet defined
       - name: Run notification settings use case tests
-        uses: grafana/k6-action@e4714b734f2b0afaabeb7b4a69142745548ab9ec # v0.3.1
+        uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d # v1.3.1
         with:
-          filename: test/k6/src/tests/notification-settings.js
-          flags: -e env=${{ vars.ENV }} -e tokenGeneratorUserName=${{ secrets.TOKENGENERATOR_USERNAME }} -e tokenGeneratorUserPwd=${{ secrets.TOKENGENERATOR_USERPASSWORD }} -e userID=${{ secrets.USERID }} -e partyId=${{ secrets.PARTYID }} -e pid=${{ secrets.PID }} -e partyUuid=${{ secrets.PARTYUUID }}
+          path: test/k6/src/tests/notification-settings.js
+          flags: -e partyUuid=${{ secrets.PARTYUUID }}
+          inspect-flags: -e altinn_env=${{ env.altinn_env }} # Supplies the value for pre-run validation, when env vars / flags are not yet defined
       - name: Run org notification addresses use case tests
-        uses: grafana/k6-action@e4714b734f2b0afaabeb7b4a69142745548ab9ec # v0.3.1
+        uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d # v1.3.1
         with:
-          filename: test/k6/src/tests/org-notification-addresses.js
-          flags: -e env=${{ vars.ENV }} -e tokenGeneratorUserName=${{ secrets.TOKENGENERATOR_USERNAME }} -e tokenGeneratorUserPwd=${{ secrets.TOKENGENERATOR_USERPASSWORD }} -e userID=${{ secrets.USERID }} -e partyId=${{ secrets.PARTYID }} -e pid=${{ secrets.PID }} -e orgNo=${{ secrets.ORGNO }}
-      - name: Build failure report
+          path: test/k6/src/tests/org-notification-addresses.js
+          flags: -e orgNo=${{ secrets.ORGNO }}
+          inspect-flags: -e altinn_env=${{ env.altinn_env }} # Supplies the value for pre-run validation, when env vars / flags are not yet defined
+      - name: Set failure output
+        id: set-failure
         if: failure()
         run: |
-          report=":warning: Profile use case test failure in ${{ matrix.environment }} :warning: \n"
-          report+="\n Workflow available here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          echo "stepreport="$report >> $GITHUB_ENV
-      - name: Report failure to Slack
-        if: failure()
-        id: slack
+          echo "${{ matrix.environment }}=true" >> $GITHUB_OUTPUT
+  slack-notify:
+    if: failure()
+    needs: test
+    permissions: {}
+    strategy:
+      matrix:
+        environment: [AT22, AT23, AT24]
+        include:
+          - environment: AT22
+            output: failed-AT22
+          - environment: AT23
+            output: failed-AT23
+          - environment: AT24
+            output: failed-AT24
+    runs-on: ubuntu-latest
+    steps:
+      - name: Send notification
+        if: needs.test.outputs[matrix.output] == 'true'
         uses: slackapi/slack-github-action@91efab103c0de0a537f72a35f6b8cda0ee76bf0a # v2.1.1
         with:
           webhook-type: incoming-webhook
           webhook: ${{ secrets.SLACK_WEBHOOK_URL_TEST }}
           payload: |
             {
-              "text": "${{ env.stepreport }}"
+              "text": ":warning: Profile use case test failure in ${{ matrix.environment }} :warning: \n\n Workflow available here: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
             }
