--- a/src/Altinn.Profile.Core/Altinn.Profile.Core.csproj
+++ b/src/Altinn.Profile.Core/Altinn.Profile.Core.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Altinn.ApiClients.Maskinporten" Version="9.2.1" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
     <PackageReference Include="Scrutor" Version="7.0.0" />
   </ItemGroup>
