Remove log level rules with information level in prod and staging envs

--- a/src/Altinn.Profile/appsettings.Staging.json
+++ b/src/Altinn.Profile/appsettings.Staging.json
@@ -10,18 +10,14 @@
       "LogLevel": {
         "Default": "Warning",
         "System": "Warning",
-        "Microsoft": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information", // keep DB info logs
-        "System.Data": "Information"
+        "Microsoft": "Warning"
       }
     },
     "OpenTelemetry": {
       "LogLevel": {
         "Default": "Warning",
         "System": "Warning",
-        "Microsoft": "Warning",
-        "Microsoft.EntityFrameworkCore": "Information", // keep DB info logs
-        "System.Data": "Information"
+        "Microsoft": "Warning"
       }
     }
   }
